[project]
name = "bento-mdb-updates"
version = "0.1.0"
description = "Tools for updating MDB"
authors = [{name="Nelson Moore", email="nelson.moore@essential-soft.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bento-mdf>=0.11.3",
    "bento-meta>=0.2.12",
    "click>=8.1.8",
    "liquichange>=0.2.1",
    "minicypher",
    "packaging>=24.2",
    "prefect>=3.1.15",
    "pytest>=8.3.4",
]

[tool.uv.sources]
minicypher = { git = "https://github.com/CBIIT/minicypher" }
