[project]
name = "bento-mdb-updates"
version = "0.1.0"
description = "Tools for updating MDB"
authors = [{name="Nelson Moore", email="nelson.moore@essential-soft.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bento-mdf>=0.11.3",
    "bento-meta>=0.2.12",
    "click>=8.1.8",
    "liquichange>=0.2.1",
    "minicypher",
    "packaging>=24.2",
    "prefect>=3.1.15",
    "pyliquibase>=2.4.0",
    "pytest>=8.3.4",
    "stamina>=24.3.0",
]

[tool.uv.sources]
minicypher = { git = "https://github.com/CBIIT/minicypher" }

[project.scripts]
generate_model_version_matrix = "scripts.generate_model_version_matrix:main"
check_new_mdfs = "scripts.check_new_mdfs:main"
get_pvs_and_synonyms = "scripts.get_pvs_and_synonyms:main"
get_pvs_json = "scripts.get_pvs_json:main"
make_model_cde_changelog = "scripts.make_model_cde_changelog:main"
make_model_changelog = "scripts.make_model_changelog:main"
update_mdb = "scripts.update_mdb:main"
update_terms = "scripts.update_terms:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bento_mdb_updates"]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "testcontainers>=4.9.2",
]

[tool.pytest.ini_options]
markers = [
    "docker: marks tests that require docker",
]

[tool.uv]
package = true