[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bento-mdb-updates"
version = "0.1.0"
description = "Tools for updating MDB"
authors = [{name="Nelson Moore", email="nelson.moore@essential-soft.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bento-mdf>=0.11.3",
    "bento-meta>=0.2.12",
    "boto3>=1.38.36",
    "click>=8.1.8",
    "liquichange>=0.2.1",
    "minicypher>=0.1.1",
    "packaging>=24.2",
    "prefect==3.3.4",
    "prefect-aws>=0.5.9",
    "prefect-shell>=0.3.1",
    "pygithub>=2.6.1",
    "pyliquibase>=2.4.0",
    "pytest>=8.3.4",
    "stamina>=24.3.0",
]

[project.scripts]
check_new_mdfs = "scripts.check_new_mdfs:main"
filter_datahub_models = "scripts.filter_datahub_models:main"
generate_model_version_matrix = "scripts.generate_model_version_matrix:main"
get_pvs_and_synonyms = "scripts.get_pvs_and_synonyms:main"
get_pvs_json = "scripts.get_pvs_json:main"
make_model_cde_changelog = "scripts.make_model_cde_changelog:main"
make_model_changelog = "scripts.make_model_changelog:main"
update_mdb = "scripts.update_mdb:main"
update_terms = "scripts.update_terms:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bento_mdb_updates", "scripts"]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "testcontainers>=4.9.2",
    "pytest-docker>=3.2.1",
    "pytest-docker-tools>=3.1.9",
    "prefect-docker>=0.6.2",
]

[tool.pytest.ini_options]
markers = [
    "docker: marks tests that require docker",
]

[tool.uv]
package = true
